@startuml
class de.mash1t.chat.security.basics.CryptoBasics
class de.mash1t.chat.security.basics.SessionIdGenerator
class de.mash1t.chat.security.cryptography.EncryptionMethod
class de.mash1t.chat.security.cryptography.method.Aes
enum de.mash1t.chat.security.cryptography.Method
interface de.mash1t.chat.security.cryptography.crypter
de.mash1t.chat.security.basics.CryptoBasics ..> de.mash1t.chat.security.cryptography.EncryptionMethod
de.mash1t.chat.security.basics.CryptoBasics ..> de.mash1t.chat.security.cryptography.method.Aes
de.mash1t.chat.security.basics.CryptoBasics ..> de.mash1t.chat.security.cryptography.Method
de.mash1t.chat.security.cryptography.EncryptionMethod ..> de.mash1t.chat.security.basics.SessionIdGenerator
de.mash1t.chat.security.cryptography.EncryptionMethod --|> de.mash1t.chat.security.cryptography.crypter
de.mash1t.chat.security.cryptography.method.Aes ..> de.mash1t.chat.security.basics.CryptoBasics
de.mash1t.chat.security.cryptography.method.Aes --|> de.mash1t.chat.security.cryptography.EncryptionMethod
de.mash1t.chat.security.cryptography.method.Aes --|> de.mash1t.chat.security.cryptography.crypter
@enduml